Fix scrollbars on have fun

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -3,6 +3,7 @@ body, html, main, .autosize {
 }
 
 body {
+    overflow: hidden;
     font-family: Arial, sans-serif;
     color: #000;
     background-color: #000;
